packages/lustre-v6.6.103.3/test/should_fail/semantics/arity.lus
node arity(a,b:int) returns (x,y: int);
let
	x,y = myplus(a,b); -- bad arity!
tel

node myplus(a,b:int) returns (x: int);
let
	x = a+b;
tel
